[package]
name = "sockdig"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
netlink-packet-sock-diag = "0.4.0"
netlink-sys = "0.8.3"
simplelog = "0.12.0"
regex = "1"
procfs = "0.14.2"
arg = "0.4.1"
structopt = "0.3.26"
network-interface = "1.0.1"
